@@ -2965,16 +2965,16 @@ This is the Whirlpool algorithm which yields a message digest of 64
 bytes.
 
 @item GCRY_MD_GOSTR3411_94
-This is the hash algorithm described in GOST R 34.11-94. It yields
+This is the hash algorithm described in GOST R 34.11-94 which yields a
 message digest of 32 bytes.
 
-@item GCRY_MD_GOSTR3411_12_256
+@item GCRY_MD_STRIBOG256
 This is the 256-bit version of hash algorithm described in GOST R 34.11-2012
-which yields message digests of 32 bytes.
+which yields a message digest of 32 bytes.
 
-@item GCRY_MD_GOSTR3411_12_512
+@item GCRY_MD_STRIBOG512
 This is the 512-bit version of hash algorithm described in GOST R 34.11-2012
-which yields message digests of 64 bytes.
+which yields a message digest of 64 bytes.
 
 @end table
 @c end table of hash algorithms
