@@ -1088,12 +1088,12 @@ enum gcry_md_algos
     GCRY_MD_CRC32         = 302,
     GCRY_MD_CRC32_RFC1510 = 303,
     GCRY_MD_CRC24_RFC2440 = 304,
-    GCRY_MD_WHIRLPOOL = 305,
-    GCRY_MD_TIGER1  = 306, /* TIGER fixed.  */
-    GCRY_MD_TIGER2  = 307, /* TIGER2 variant.   */
-    GCRY_MD_GOSTR3411_94 = 308, /* GOST R 34.11-94. */
-    GCRY_MD_GOSTR3411_12_256 = 309, /* GOST R 34.11-2012, 256 bit */
-    GCRY_MD_GOSTR3411_12_512 = 310, /* GOST R 34.11-2012, 512 bit */
+    GCRY_MD_WHIRLPOOL     = 305,
+    GCRY_MD_TIGER1        = 306, /* TIGER fixed.  */
+    GCRY_MD_TIGER2        = 307, /* TIGER2 variant.   */
+    GCRY_MD_GOSTR3411_94  = 308, /* GOST R 34.11-94.  */
+    GCRY_MD_STRIBOG256    = 309, /* GOST R 34.11-2012, 256 bit.  */
+    GCRY_MD_STRIBOG512    = 310  /* GOST R 34.11-2012, 512 bit.  */
   };
 
 /* Flags used with the open function.  */
