@@ -14,6 +14,11 @@ Noteworthy changes in version 1.6.0 (unreleased)
 
  * Added support for the Salsa20 and reduced Salsa20/12 stream ciphers.
 
+ * Added limited support for the GOST 28147-89 cipher algorithm.
+
+ * Added support for the GOST R 34.11-94 and R 34.11-2012 (Stribog)
+   hash algorithms.
+
  * Added a random number generator to directly use the system's RNG.
    Also added an interface to prefer the use of a specified RNG.
 
@@ -93,6 +98,10 @@ Noteworthy changes in version 1.6.0 (unreleased)
  GCRY_CIPHER_SALSA20             NEW.
  gcry_sexp_nth_buffer            NEW.
  GCRY_CIPHER_SALSA20R12          NEW.
+ GCRY_CIPHER_GOST28147           NEW.
+ GCRY_MD_GOSTR3411_94            NEW.
+ GCRY_MD_STRIBOG256              NEW.
+ GCRY_MD_STRIBOG512              NEW.
 
 
 Noteworthy changes in version 1.5.0 (2011-06-29)
